plugins {
    id 'java'
    id 'application'
    id "org.openjfx.javafxplugin" version "0.0.13"
}

ext { CBL_VERSION = "3.1.0-413" }

// Set true to use mavenLocal instead of Proget
def USE_LOCAL_MAVEN = project.hasProperty("useLocalMaven")
def CBL_LIB_EXT = (!USE_LOCAL_MAVEN) ? "" : "-macos"

group 'com.couchbase'
version '1.0'

java {
    targetCompatibility "1.8"
    sourceCompatibility "1.8"

    application { mainClassName = 'com.couchbase.todo.TodoApp' }
}

repositories {
    if (USE_LOCAL_MAVEN) { mavenLocal() }
    else {
        maven {
            url "https://proget.sc.couchbase.com/maven2/internalmaven/"
            allowInsecureProtocol = true
        }
    }

    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:22.0.0'

    implementation "com.couchbase.lite:couchbase-lite-java-ee${CBL_LIB_EXT}:${CBL_VERSION}"
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

